<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:orientation="vertical"
    tools:context=".MainActivity2">



        <TextView
            android:id="@+id/textView2"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerHorizontal="true"
            android:text="MAIN PAGE"
            android:drawableStart="@drawable/baseline_home_24"
            android:drawablePadding="10dp"
            android:textSize="35sp"
             />
    <Button
        android:id="@+id/yon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button19"
        android:text="DIRECTIONS"
        android:textSize="25sp"
        android:layout_marginTop="10dp"/>


    <Button
        android:id="@+id/clk"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="50dp"


        android:text="@string/saatler"
        android:textSize="25sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/clk"
            android:layout_marginTop="10dp"
            android:text="@string/mevsimler"
            android:textSize="25sp"
            />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button"
            android:layout_marginTop="10dp"
            android:text="@string/g_nler_aylar"
            android:textSize="25sp"

          />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/button3"
            android:text="MULTIPLICATION"
            android:textSize="25sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/button19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/button4"
            android:text="ATTENTION GAME"
            android:layout_marginTop="10dp"
            android:textSize="25sp"/>




        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="EXIT"

          />



</RelativeLayout>



