<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:orientation="vertical"

    tools:context=".clock">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:gravity="center"
        android:textColor="@color/yellow"
        android:text="@string/KONUANLATIMI" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp"

        android:text="@string/SAATLER" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ANALOG"
            android:layout_height="wrap_content"
            android:textSize="25sp">

        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/DİJİTAL">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="202dp"
                android:layout_height="143dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/indir" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="202dp"
                android:layout_height="143dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/digital" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txt1"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Shor One Is Hour"
                android:gravity="center"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Long One Is Minute"
                android:textColor="@color/black"
                android:layout_below="@id/txt1"
                android:textSize="19sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="After Half (After 30)"
                android:layout_below="@+id/img"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:id="@+id/sta"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Before Half (Before 30)"
                android:layout_below="@id/sta"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="19sp"/>

        <ImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_21"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="181dp"
                android:layout_marginTop="70dp"
                android:paddingLeft="10dp"
                android:src="@drawable/img_22" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="First Two Digit Hour"
                android:textSize="20sp"
                android:layout_marginTop="15dp"
                android:textColor="@color/black"
                android:id="@+id/txt2"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="19sp"
                android:text="Last Two Minute"
                android:layout_below="@+id/txt2"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/satkonugeri"
                android:text="Clock Game" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geri"
                android:layout_centerHorizontal="true"

                android:layout_alignParentBottom="true"
                android:id="@+id/satkonugeri"/>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>